--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>FitApp - Mobile App HTML Template</title>
+    <title>Yall Fit</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -57,11 +57,12 @@
                         <a href="#home" class="nav-item nav-link active">Home</a>
                         <a href="#about" class="nav-item nav-link">About</a>
                         <a href="#feature" class="nav-item nav-link">Feature</a>
-                        <a href="#pricing" class="nav-item nav-link">Pricing</a>
-                        <a href="#review" class="nav-item nav-link">Review</a>
+                        <a href="#team" class = "nav-item nav-link">Team</a>
+                        <!-- <a href="#pricing" class="nav-item nav-link">Pricing</a> -->
+                        <!-- <a href="#review" class="nav-item nav-link">Review</a> -->
                         <a href="#contact" class="nav-item nav-link">Contact</a>
                     </div>
-                    <a href="" class="btn btn-primary-gradient rounded-pill py-2 px-4 ms-3 d-none d-lg-block">Start Free Trial</a>
+                    <!-- <a href="" class="btn btn-primary-gradient rounded-pill py-2 px-4 ms-3 d-none d-lg-block">Start Free Trial</a> -->
                 </div>
             </nav>
 
@@ -69,10 +70,10 @@
                 <div class="container px-lg-5">
                     <div class="row g-5">
                         <div class="col-lg-8 text-center text-lg-start">
-                            <h1 class="text-white mb-4 animated slideInDown">The Revolutionary App That Helps To Control Your Own Fitness</h1>
-                            <p class="text-white pb-3 animated slideInDown">Tempor rebum no at dolore lorem clita rebum rebum ipsum rebum stet dolor sed justo kasd. Ut dolor sed magna dolor sea diam. Sit diam sit justo amet ipsum vero ipsum clita lorem</p>
-                            <a href="" class="btn btn-primary-gradient py-sm-3 px-4 px-sm-5 rounded-pill me-3 animated slideInLeft">Read More</a>
-                            <a href="" class="btn btn-secondary-gradient py-sm-3 px-4 px-sm-5 rounded-pill animated slideInRight">Contact Us</a>
+                            <h1 class="text-white mb-4 animated slideInDown">Unlock Your Active Life with Yalla Fit</h1>
+                            <p class="text-white pb-3 animated slideInDown">At Yalla Fit, we're passionate about helping you embrace a healthier and more active lifestyle. Just like the term "Yalla" encourages action and movement, our platform is designed to inspire you to get moving, try new fitness experiences, and achieve your wellness goals.</p>
+                            <!-- <a href="" class="btn btn-primary-gradient py-sm-3 px-4 px-sm-5 rounded-pill me-3 animated slideInLeft">Read More</a>
+                            <a href="" class="btn btn-secondary-gradient py-sm-3 px-4 px-sm-5 rounded-pill animated slideInRight">Contact Us</a> -->
                         </div>
                         <div class="col-lg-4 d-flex justify-content-center justify-content-lg-end wow fadeInUp" data-wow-delay="0.3s">
                             <div class="owl-carousel screenshot-carousel">
@@ -97,8 +98,8 @@
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                         <h5 class="text-primary-gradient fw-medium">About App</h5>
                         <h1 class="mb-4">#1 App For Your Fitness</h1>
-                        <p class="mb-4">Diam dolor diam ipsum et tempor sit. Aliqu diam amet diam et eos labore. Clita erat ipsum et lorem et sit, sed stet no labore lorem sit clita duo justo eirmod magna dolore erat amet</p>
-                        <div class="row g-4 mb-4">
+                        <p class="mb-4">Welcome to Yalla Fit, your ultimate fitness and wellness partner! We're here to bring a world of workouts and wellness to your fingertips. With a dynamic range of classes, activities, and gyms all in one place, Yalla Fit makes it easy to discover, book, and enjoy a variety of fitness options that suit your preferences and schedule</p>
+                        <!-- <div class="row g-4 mb-4">
                             <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
                                 <div class="d-flex">
                                     <i class="fa fa-cogs fa-2x text-primary-gradient flex-shrink-0 mt-1"></i>
@@ -117,8 +118,8 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <a href="" class="btn btn-primary-gradient py-sm-3 px-4 px-sm-5 rounded-pill mt-3">Read More</a>
+                        </div> -->
+                        <!-- <a href="" class="btn btn-primary-gradient py-sm-3 px-4 px-sm-5 rounded-pill mt-3">Read More</a> -->
                     </div>
                     <div class="col-lg-6">
                         <img class="img-fluid wow fadeInUp" data-wow-delay="0.5s" src="img/about.png">
@@ -142,8 +143,8 @@
                             <div class="d-inline-flex align-items-center justify-content-center bg-primary-gradient rounded-circle mb-4" style="width: 60px; height: 60px;">
                                 <i class="fa fa-eye text-white fs-4"></i>
                             </div>
-                            <h5 class="mb-3">High Resolution</h5>
-                            <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+                            <h5 class="mb-3">Variety</h5>
+                            <p class="m-0">Explore a diverse selection of classes and fitness centers, ensuring you'll never get bored with your routine.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
@@ -151,8 +152,8 @@
                             <div class="d-inline-flex align-items-center justify-content-center bg-secondary-gradient rounded-circle mb-4" style="width: 60px; height: 60px;">
                                 <i class="fa fa-layer-group text-white fs-4"></i>
                             </div>
-                            <h5 class="mb-3">Retina Ready</h5>
-                            <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+                            <h5 class="mb-3">Conveniencey</h5>
+                            <p class="m-0">Book your workouts effortlessly and manage your schedule all in one place.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
@@ -160,8 +161,8 @@
                             <div class="d-inline-flex align-items-center justify-content-center bg-primary-gradient rounded-circle mb-4" style="width: 60px; height: 60px;">
                                 <i class="fa fa-edit text-white fs-4"></i>
                             </div>
-                            <h5 class="mb-3">Editable Data</h5>
-                            <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+                            <h5 class="mb-3">Flexibility</h5>
+                            <p class="m-0">Enjoy the freedom to choose when and where you want to work out without being tied to a single gym membership.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
@@ -169,8 +170,8 @@
                             <div class="d-inline-flex align-items-center justify-content-center bg-secondary-gradient rounded-circle mb-4" style="width: 60px; height: 60px;">
                                 <i class="fa fa-shield-alt text-white fs-4"></i>
                             </div>
-                            <h5 class="mb-3">Fully Secured</h5>
-                            <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+                            <h5 class="mb-3">Community</h5>
+                            <p class="m-0">Join a vibrant community of like-minded individuals who are all on a journey to lead healthier lives.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
@@ -178,8 +179,8 @@
                             <div class="d-inline-flex align-items-center justify-content-center bg-primary-gradient rounded-circle mb-4" style="width: 60px; height: 60px;">
                                 <i class="fa fa-cloud text-white fs-4"></i>
                             </div>
-                            <h5 class="mb-3">Cloud Storage</h5>
-                            <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+                            <h5 class="mb-3">Expert Instructors</h5>
+                            <p class="m-0">Our classes are led by experienced instructors who are passionate about helping you reach your fitness goals.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
@@ -187,8 +188,8 @@
                             <div class="d-inline-flex align-items-center justify-content-center bg-secondary-gradient rounded-circle mb-4" style="width: 60px; height: 60px;">
                                 <i class="fa fa-mobile-alt text-white fs-4"></i>
                             </div>
-                            <h5 class="mb-3">Fully Responsive</h5>
-                            <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+                            <h5 class="mb-3">Wellness Ecosystem</h5>
+                            <p class="m-0">Yalla Fit isn't just about workouts; it's a holistic wellness ecosystem that promotes physical, mental, and emotional well-being.</p>
                         </div>
                     </div>
                 </div>
@@ -202,13 +203,13 @@
             <div class="container py-5 px-lg-5">
                 <div class="row g-5 align-items-center">
                     <div class="col-lg-8 wow fadeInUp" data-wow-delay="0.1s">
-                        <h5 class="text-primary-gradient fw-medium">Screenshot</h5>
-                        <h1 class="mb-4">User Friendly interface And Very Easy To Use Fitness App</h1>
-                        <p class="mb-4">Diam dolor diam ipsum et tempor sit. Aliqu diam amet diam et eos labore. Clita erat ipsum et lorem et sit, sed stet no labore lorem sit clita duo justo eirmod magna dolore erat amet</p>
-                        <p><i class="fa fa-check text-primary-gradient me-3"></i>Diam dolor diam ipsum et tempor sit</p>
+                        <h5 class="text-primary-gradient fw-medium">Our Mission</h5>
+                        <h1 class="mb-4">Empowering Your Journey to Wellness</h1>
+                        <p class="mb-4">At Yalla Fit, our mission is to make fitness accessible, fun, and flexible for everyone. We believe that staying active should be an enjoyable journey, and we're dedicated to helping you find your perfect balance of workouts that you genuinely love. Whether you're into yoga, spinning, dance, HIIT, or trying something entirely new, Yalla Fit has the options to keep you motivated and engaged.</p>
+                        <!-- <p><i class="fa fa-check text-primary-gradient me-3"></i>Diam dolor diam ipsum et tempor sit</p>
                         <p><i class="fa fa-check text-primary-gradient me-3"></i>Aliqu diam amet diam et eos labore</p>
-                        <p class="mb-4"><i class="fa fa-check text-primary-gradient me-3"></i>Clita erat ipsum et lorem et sit</p>
-                        <a href="" class="btn btn-primary-gradient py-sm-3 px-4 px-sm-5 rounded-pill mt-3">Read More</a>
+                        <p class="mb-4"><i class="fa fa-check text-primary-gradient me-3"></i>Clita erat ipsum et lorem et sit</p> -->
+                        <!-- <a href="" class="btn btn-primary-gradient py-sm-3 px-4 px-sm-5 rounded-pill mt-3">Read More</a> -->
                     </div>
                     <div class="col-lg-4 d-flex justify-content-center justify-content-lg-end wow fadeInUp" data-wow-delay="0.3s">
                         <div class="owl-carousel screenshot-carousel">
@@ -226,7 +227,7 @@
 
 
         <!-- Process Start -->
-        <div class="container-xxl py-5">
+        <!-- <div class="container-xxl py-5">
             <div class="container py-5 px-lg-5">
                 <div class="text-center pb-4 wow fadeInUp" data-wow-delay="0.1s">
                     <h5 class="text-primary-gradient fw-medium">How It Works</h5>
@@ -262,7 +263,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Process Start -->
 
 
@@ -276,7 +277,7 @@
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
                         <h5 class="text-primary-gradient fw-medium">Download</h5>
                         <h1 class="mb-4">Download The Latest Version Of Our App</h1>
-                        <p class="mb-4">Diam dolor diam ipsum et tempor sit. Aliqu diam amet diam et eos labore. Clita erat ipsum et lorem et sit, sed stet no labore lorem sit clita duo justo eirmod magna dolore erat amet</p>
+                        <p class="mb-4">Stay connected to your fitness goals on the go with the Yalla Fit app. Whether you're at home, work, or traveling, our user-friendly app gives you instant access to a world of workouts and wellness. Discover new classes, book sessions with ease, track your progress, and engage with a vibrant community of fitness enthusiasts, all from the palm of your hand. Elevate your fitness experience – download the Yalla Fit app now and embark on a journey to a healthier, happier you.</p>
                         <div class="row g-4">
                             <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
                                 <a href="" class="d-flex bg-primary-gradient rounded py-3 px-4">
@@ -302,10 +303,52 @@
             </div>
         </div>
         <!-- Download End -->
+        <!-- Team Start --> 
+        <div class="container-xxl py-5" id="team">
+            <div class="container py-5 px-lg-5">
+                <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
+                    <h5 class="text-primary-gradient fw-medium">Our Team</h5>
+                    <h1 class="mb-5">Meet Our Leaders</h1>
+                </div>
+                <div class="row g-5">
+                    <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
+                        <div class="card border-0 shadow-sm">
+                            <img src="img/team-1.jpg" class="card-img-top" alt="...">
+                            <div class="card-body text-center">
+                                <h5 class="card-title mb-0">John Gamal</h5>
+                                <p class="card-text text-muted">CEO</p>
+                                <div class="d-flex justify-content-center">
+                                    <a href="#" class="text-muted me-3"><i class="fab fa-facebook-f"></i></a>
+                                    <a href="#" class="text-muted me-3"><i class="fab fa-twitter"></i></a>
+                                    <a href="#" class="text-muted me-3"><i class="fab fa-linkedin-in"></i></a>
+                                    <a href="#" class="text-muted"><i class="fab fa-instagram"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
+                        <div class="card border-0 shadow-sm">
+                            <img src="img/team-2.jpg" class="card-img-top" alt="...">
+                            <div class="card-body text-center">
+                                <h5 class="card-title mb-0">Mohamed Kamel</h5>
+                                <p class="card-text text-muted">CTO</p>
+                                <div class="d-flex justify-content-center">
+                                    <!-- <a href="#" class="text-muted me-3"><i class="fab fa-facebook-f"></i></a>
+                                    <a href="#" class="text-muted me-3"><i class="fab fa-twitter"></i></a> -->
+                                    <a href="#" class="text-muted me-3"><i class="fab fa-linkedin-in"></i></a>
+                                    <!-- <a href="#" class="text-muted"><i class="fab fa-instagram"></i></a> -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Team End -->
 
 
         <!-- Pricing Start -->
-        <div class="container-xxl py-5" id="pricing">
+        <!-- <div class="container-xxl py-5" id="pricing">
             <div class="container py-5 px-lg-5">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                     <h5 class="text-primary-gradient fw-medium">Pricing Plan</h5>
@@ -446,12 +489,12 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Pricing End -->
 
 
         <!-- Testimonial Start -->
-        <div class="container-xxl py-5" id="review">
+        <!-- <div class="container-xxl py-5" id="review">
             <div class="container py-5 px-lg-5">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                     <h5 class="text-primary-gradient fw-medium">Testimonial</h5>
@@ -528,7 +571,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Testimonial End -->
 
 
@@ -542,7 +585,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-9">
                         <div class="wow fadeInUp" data-wow-delay="0.3s">
-                            <p class="text-center mb-4">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p>
+                            <p class="text-center mb-4">Ready to take the next step on your fitness journey? Join Yalla Fit today and unlock a world of possibilities for your active lifestyle. Your health and happiness are our priorities, and we can't wait to accompany you on your path to a fitter, more vibrant you.</p>
                             <form>
                                 <div class="row g-3">
                                     <div class="col-md-6">
